[metadata]
name = scintillometry
author = Marten H. van Kerkwijk, Jing Luo, Chenchong Zhu
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://scintillometry.readthedocs.io
description = A package for radio baseband data reduction and analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/scintillometry

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy>=3.2
    baseband>=3.0

[options.extras_require]
all =
    pyfftw
    h5py
    pyyaml
test =
    pytest-astropy
docs =
    sphinx-astropy
    pyfftw
    h5py
    pyyaml

[options.package_data]
scintillometry = data/*
scintillometry.tests = data/*
scintillometry.io.psrfits.tests = data/*

[tool:pytest]
testpaths = "scintillometry" "docs"
astropy_header = true
astropy_header_packages =
    baseband
    astropy
    numpy
    pyfftw
    pint
    h5py
    yaml
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
filterwarnings =
  ignore:::pytest_doctestplus

[coverage:run]
omit =
    scintillometry/_astropy_init*
    scintillometry/conftest.py
    scintillometry/*setup_package*
    scintillometry/tests/*
    scintillometry/*/tests/*
    scintillometry/extern/*
    scintillometry/version*
    */scintillometry/_astropy_init*
    */scintillometry/conftest.py
    */scintillometry/*setup_package*
    */scintillometry/tests/*
    */scintillometry/*/tests/*
    */scintillometry/extern/*
    */scintillometry/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    scintillometry/conftest.py,scintillometry/version.py,scintillometry/__init__.py,
    scintillometry/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    scintillometry/conftest.py,scintillometry/version.py,scintillometry/__init__.py,
    scintillometry/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
