[metadata]
name = baseband-tasks
provides = baseband_tasks
author = Marten H. van Kerkwijk, Jing Luo, Chenchong Zhu
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://baseband-tasks.readthedocs.io
project_urls =
    Documentation = https://baseband.readthedocs.io/projects/baseband-tasks
description = A package for radio baseband data reduction and analysis
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/baseband-tasks

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    baseband>=4.1

[options.entry_points]
baseband.tasks =
    base = baseband_tasks.base
    SetAttribute = baseband_tasks.base:SetAttribute
    Task = baseband_tasks.base:Task
    channelize = baseband_tasks.channelize:__all__
    combining = baseband_tasks.combining:__all__
    conversion = baseband_tasks.conversion:__all__
    convolution = baseband_tasks.convolution:__all__
    dispersion = baseband_tasks.dispersion:__all__
    functions = baseband_tasks.functions:__all__
    integration = baseband_tasks.integration:__all__
    pfb = baseband_tasks.pfb:__all__
    sampling = baseband_tasks.sampling:__all__
    shaping = baseband_tasks.shaping:__all__
    fourier = baseband_tasks.fourier
    dm = baseband_tasks.dm
    phases = baseband_tasks.phases
    generators = baseband_tasks.generators
baseband.io =
    hdf5 = baseband_tasks.io.hdf5

[options.extras_require]
all =
    pyfftw
    h5py
    pint-pulsar
io =
    h5py
test =
    pytest-astropy-header
    pytest-doctestplus
    importlib_metadata;python_version<'3.8'
cov =
    pytest-cov
docs =
    sphinx-astropy
    pyfftw
    h5py
    pint-pulsar

[options.package_data]
baseband_tasks = data/*
baseband_tasks.tests = data/*
baseband_tasks.io.psrfits.tests = data/*

[tool:pytest]
testpaths = "baseband_tasks" "docs"
astropy_header = true
astropy_header_packages =
    baseband
    astropy
    numpy
    pyfftw
    pint
    h5py
    yaml
doctest_plus = enabled
text_file_format = rst
addopts = -rx --doctest-rst --doctest-ignore-import-errors
filterwarnings =
  error
  ignore:::pytest_doctestplus
  # vvv warnings from PINT that we cannot help.
  ignore:::pint
  ignore:elementwise == comparison failed and returning scalar instead:FutureWarning
  # vvv general numpy warnings
  ignore:numpy.ufunc size changed:RuntimeWarning
  ignore:numpy.ndarray size changed:RuntimeWarning
  # vvv for astropy 4.0.1 and numpy 1.19
  ignore:tostring\(\) is deprecated::astropy
  # vvv for h5py and numpy 1.19
  ignore:Passing None into shape::h5py
  # vvv for yaml on s390/focal
  ignore:Using or importing the ABCs::yaml
  # vvv for newer versions of entrypoints.
  ignore:SelectableGroups dict interface is deprecated.:DeprecationWarning

[coverage:run]
omit =
    baseband_tasks/*setup_package*
    baseband_tasks/tests/*
    baseband_tasks/*/tests/*
    baseband_tasks/extern/*
    baseband_tasks/version*
    */baseband_tasks/*setup_package*
    */baseband_tasks/tests/*
    */baseband_tasks/*/tests/*
    */baseband_tasks/extern/*
    */baseband_tasks/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband_tasks/version.py,baseband_tasks/__init__.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband_tasks/version.py,baseband_tasks/__init__.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
